--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body class='bg-black flex h-screen'>
 	<div class='text-center align-middle m-auto'>
-		<img src='images/denouement-press-logo.png' width="40%" class='mx-auto'/>
-		<a href='mailto:info@denouementpress.com' class='text-white underline'>info@denouementpress.com</a>
-		<br>
+		<img src='images/denouement-press-logo.png' width="40%" class='mx-auto mb-2'/>
+		<div class='grid-cols-2 mb-4'>
+			<img src='images/convention-of-wives-cover.jpg' width="20%" class='inline mr-2'/>
+			<img src='images/mahjong-cover.jpg' width="20%" class='inline'/>
+		</div>
+		<p class='text-white '>
+			For more information, contact <a href='mailto:info@denouementpress.com' class='underline'>info@denouementpress.com</a>.
+		</p>
 		<br>
 		<br>
 	</div>
